fix bug where text isn't visible when dark mode is enabled
A bug was occurring where the text's colour was changing to white, against a
white background, causing it to be unreadable.

--- a/src/app/categories/categories.component.scss
+++ b/src/app/categories/categories.component.scss
@@ -15,7 +15,7 @@ div {
   opacity: 0;
   h2 {
     margin-bottom: 0;
-    color:--text-color;
+    color:#3f4447;
   }
 }
 div:hover {
